[package]
name = "mqtterminal-server"
version = "0.1.0"
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.9"
clap = "2.33"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"

[[bin]]
name = "mqttterminal-server"
path = "src/main.rs"

[features]
vendored-openssl = ["openssl/vendored"]
